--- a/index.html
+++ b/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
+<!-- Description: Assignment 2 work-->
 <html lang="en">
+    <div class="content"> <p>This is some content for the website.</p></div> <!-- Missing closing </div> tag here -->
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Mozart</title>
+<link rel="stylesheet" href="main.css">
     </head>
     <body>
         <h1>Wolfgang Amadeus Mozart</h1>
@@ -14,3 +17,4 @@ from his earliest childhood.</p>
       
     </body>
 </html>
+git config --global user.email kamrod1021@gmail.com
