--- a/Personal Portfolio.html
+++ b/Personal Portfolio.html
@@ -9,13 +9,14 @@
 
     </head>
     <body>
+        <!--This is my main header my-->
         <h1>Kameron Rodriguez</h1>
             
-
+        <!--This is the start of the "about me"-->
         <h2>Biography</h2>
 
         <p>Hey people, I'm Kam I'm 25 I currently work at a job that well, pays the bills. I hope to strengthen my skills and for me to get to where I need to be to reach my goals. This class is part of that journey. I hope to learn better programming habits and I hope to learn from this class.</p>
-
+        <!--I learned the bullet point listing from the book, it came in clutch-->
         <h2>Technical Skills</h2>
         <ul></ul>
 
@@ -27,7 +28,7 @@
             <li> learning GDOT </li>
             <li> learning Python </li>
         </ul>
-
+        <!--My journey is just beginning, and I have so many ideas, I just need to figure out how to execute them.-->
         <h2>Projects</h2>
 
         <h2>Unity 2D Level Maker</h2>
